--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 # Copy this file to .env and set a strong password before running
 # Example:
 # DB_PASSWORD=your_strong_password_here
-DB_PASSWORD=change_me
+DB_PASSWORD=this_is_a_strong_password
